# XMRGArchive

./: Dockerfile  README.md  archive_utilities.py  main.py  nfs_mount_utils.py  pyproject.toml
config/: xmrg_archive_config_template.ini  xmrg_archive_logging_docker.conf
